--- a/tutorials/code/next-react-hooks-strapi-food-delivery/frontend/package.json
+++ b/tutorials/code/next-react-hooks-strapi-food-delivery/frontend/package.json
@@ -3,8 +3,11 @@
     "@apollo/react-hooks": "3.1.5",
     "@apollo/react-ssr": "3.1.5",
     "apollo-boost": "0.4.7",
+    "axios": "0.19.2",
     "express": "^4.17.1",
     "graphql": "15.0.0",
+    "isomorphic-fetch": "2.2.1",
+    "js-cookie": "2.2.1",
     "next": "9.4.0",
     "next-apollo": "3.1.10",
     "react": "16.13.1",
