--- a/tutorials/code/next-react-hooks-strapi-food-delivery/backend/package.json
+++ b/tutorials/code/next-react-hooks-strapi-food-delivery/backend/package.json
@@ -20,7 +20,8 @@
     "strapi-plugin-graphql": "3.0.0-beta.20.3",
     "strapi-plugin-upload": "3.0.0-beta.20.3",
     "strapi-plugin-users-permissions": "3.0.0-beta.20.3",
-    "strapi-utils": "3.0.0-beta.20.3"
+    "strapi-utils": "3.0.0-beta.20.3",
+    "stripe": "^8.52.0"
   },
   "author": {
     "name": "A Strapi developer"
