--- a/tutorials/code/next-react-hooks-strapi-food-delivery/frontend/package.json
+++ b/tutorials/code/next-react-hooks-strapi-food-delivery/frontend/package.json
@@ -19,6 +19,7 @@
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "start": "NODE_ENV=production node server.js -p $PORT",
+    "heroku-postbuild": "next build"
   }
 }
