Fix typo on tutorials video title

--- a/tutorials/tutorials.yml
+++ b/tutorials/tutorials.yml
@@ -1206,7 +1206,7 @@
     - strapi
     - content type
   version: beta
-- title: Why I like Strapo
+- title: Why I like Strapi
   link: https://www.youtube.com/watch?v=EBqRR8-Hd84
   formats:
     - video
