Update last website

--- a/showcase/sites.yml
+++ b/showcase/sites.yml
@@ -1,6 +1,6 @@
 - title: Koninklijke Harmonie De Verenigde Vrienden
   url: https://www.deverenigdevriendenheusden.be
-  description: "Koninklijke Harmonie De Verenigde Vrienden" is a great group of musicians of all ages who enjoy musical fun together. It's a progressive web app with a blog and webshop. 
+  description: Koninklijke Harmonie De Verenigde Vrienden is a great group of musicians of all ages who enjoy musical fun together. It's a progressive web app with a blog and webshop. 
   categories:
     - Non-profit organisation 
   frontend:
