--- a/showcase/sites.yml
+++ b/showcase/sites.yml
@@ -487,3 +487,13 @@
     - Tailwind 
   made_by: Freatle 
   made_by_url: https://freatle.com/en/about/
+- title: MISTER MISERY
+  url: https://mistermisery.com/
+  description: This is a band website made with Nuxt.js and Vuetify for the band MISTER MISERY.
+  categories:
+    - Band website
+  frontend:
+    - Nuxt.js
+    - Vuetify
+  made_by: Fabian Mieller
+  made_by_url: https://fabianmieller.de
