Add Smarttools E Shop
Thanks Strapi for handy tools

--- a/showcase/sites.yml
+++ b/showcase/sites.yml
@@ -486,4 +486,17 @@
     - Bulma
     - Tailwind 
   made_by: Freatle 
-  made_by_url: https://freatle.com/en/about/
+  made_by_url: https://freatle.com/en/about/  
+  --------------
+  - title: smarttools.ir
+  url: http://smarttools.ir
+  description: مشاوره در مهندسی تولید و انتخاب ابزار مناسب و روشهای نوین ماشین کاری از بهترین تامین کنندگان ایران و جهان
+  categories:
+    - e-commerce
+  frontend:
+    - React js
+    - Apollo
+    - Material UI    
+  made_by: Hooman Amini
+  made_by_url: youtube.com/c/hoomanamini
+  
