Add video component

--- a/tutorials/code/next-corporate-site/back/api/homepage/models/homepage.settings.json
+++ b/tutorials/code/next-corporate-site/back/api/homepage/models/homepage.settings.json
@@ -12,7 +12,9 @@
     "slices": {
       "type": "dynamiczone",
       "components": [
-        "slices.hero"
+        "slices.hero",
+        "slices.large-video",
+        "slices.feature-columns-group"
       ]
     }
   }
