Feature rows and columns

--- a/tutorials/code/next-corporate-site/back/api/homepage/models/homepage.settings.json
+++ b/tutorials/code/next-corporate-site/back/api/homepage/models/homepage.settings.json
@@ -14,7 +14,10 @@
       "components": [
         "slices.hero",
         "slices.large-video",
-        "slices.feature-columns-group"
+        "slices.feature-columns-group",
+        "slices.feature-column",
+        "slices.feature-row",
+        "slices.feature-rows-group"
       ]
     }
   }
