Prepare testimonial component

--- a/tutorials/code/next-corporate-site/back/api/homepage/models/homepage.settings.json
+++ b/tutorials/code/next-corporate-site/back/api/homepage/models/homepage.settings.json
@@ -18,7 +18,8 @@
         "slices.feature-column",
         "slices.feature-row",
         "slices.feature-rows-group",
-        "slices.bottom-actions"
+        "slices.bottom-actions",
+        "slices.testimonials-group"
       ]
     }
   }
