--- a/tutorials/code/next-corporate-site/back/package.json
+++ b/tutorials/code/next-corporate-site/back/package.json
@@ -11,17 +11,17 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "knex": "<0.20.0",
+    "sqlite3": "latest",
     "strapi": "3.0.5",
     "strapi-admin": "3.0.5",
-    "strapi-utils": "3.0.5",
-    "strapi-plugin-content-type-builder": "3.0.5",
+    "strapi-connector-bookshelf": "3.0.5",
     "strapi-plugin-content-manager": "3.0.5",
-    "strapi-plugin-users-permissions": "3.0.5",
+    "strapi-plugin-content-type-builder": "3.0.5",
     "strapi-plugin-email": "3.0.5",
     "strapi-plugin-upload": "3.0.5",
-    "strapi-connector-bookshelf": "3.0.5",
-    "knex": "<0.20.0",
-    "sqlite3": "latest"
+    "strapi-plugin-users-permissions": "3.0.5",
+    "strapi-utils": "3.0.5"
   },
   "author": {
     "name": "A Strapi developer"
