Add metadata for SEO

--- a/tutorials/code/next-corporate-site/back/api/homepage/models/homepage.settings.json
+++ b/tutorials/code/next-corporate-site/back/api/homepage/models/homepage.settings.json
@@ -21,6 +21,11 @@
         "slices.bottom-actions",
         "slices.testimonials-group"
       ]
+    },
+    "metadata": {
+      "type": "component",
+      "repeatable": false,
+      "component": "meta.metadata"
     }
   }
 }
