--- a/tutorials/code/next-corporate-site/front/package.json
+++ b/tutorials/code/next-corporate-site/front/package.json
@@ -11,6 +11,7 @@
     "date-fns": "2.14.0",
     "isomorphic-unfetch": "3.0.0",
     "next": "latest",
+    "next-seo": "^4.7.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-markdown": "^4.3.1",
