Fixed the page slug system

--- a/tutorials/code/next-corporate-site/back/api/page/models/page.settings.json
+++ b/tutorials/code/next-corporate-site/back/api/page/models/page.settings.json
@@ -10,7 +10,9 @@
   },
   "attributes": {
     "slug": {
-      "type": "uid"
+      "type": "uid",
+      "required": false,
+      "default": ""
     },
     "parentPage": {
       "model": "page"
