--- a/tutorials/code/next-corporate-site/front/package.json
+++ b/tutorials/code/next-corporate-site/front/package.json
@@ -10,7 +10,7 @@
     "classnames": "^2.2.6",
     "date-fns": "2.14.0",
     "isomorphic-unfetch": "3.0.0",
-    "next": "latest",
+    "next": "^9.4.5-canary.28",
     "next-seo": "^4.7.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
