--- a/tutorials/code/next-corporate-site/back/api/global/models/global.settings.json
+++ b/tutorials/code/next-corporate-site/back/api/global/models/global.settings.json
@@ -40,6 +40,15 @@
       "type": "component",
       "repeatable": true,
       "component": "elements.footer-section"
+    },
+    "favicon": {
+      "model": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images"
+      ],
+      "plugin": "upload",
+      "required": false
     }
   }
 }
