Fully dynamic footer

--- a/tutorials/code/next-corporate-site/back/api/global/models/global.settings.json
+++ b/tutorials/code/next-corporate-site/back/api/global/models/global.settings.json
@@ -50,6 +50,18 @@
       ],
       "plugin": "upload",
       "required": false
+    },
+    "footerLogo": {
+      "model": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images"
+      ],
+      "plugin": "upload",
+      "required": false
+    },
+    "footerSmallText": {
+      "type": "string"
     }
   }
 }
