Enable Preview mode

--- a/tutorials/code/next-corporate-site/back/api/page/models/page.settings.json
+++ b/tutorials/code/next-corporate-site/back/api/page/models/page.settings.json
@@ -32,6 +32,15 @@
         "sections.testimonials-group",
         "sections.large-video"
       ]
+    },
+    "status": {
+      "type": "enumeration",
+      "enum": [
+        "published",
+        "draft"
+      ],
+      "default": "draft",
+      "required": true
     }
   }
 }
