--- a/tutorials/code/next-corporate-site/front/package.json
+++ b/tutorials/code/next-corporate-site/front/package.json
@@ -14,9 +14,7 @@
     "next-seo": "^4.7.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-markdown": "^4.3.1",
-    "remark": "12.0.0",
-    "remark-html": "11.0.2"
+    "react-markdown": "^4.3.1"
   },
   "devDependencies": {
     "postcss-flexbugs-fixes": "4.2.1",
