--- a/tutorials/code/next-corporate-site/front/package.json
+++ b/tutorials/code/next-corporate-site/front/package.json
@@ -12,6 +12,7 @@
     "isomorphic-unfetch": "3.0.0",
     "next": "^9.4.5-canary.31",
     "next-seo": "^4.7.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-markdown": "^4.3.1"
