Add seed data script

--- a/tutorials/code/next-corporate-site/back/.gitignore
+++ b/tutorials/code/next-corporate-site/back/.gitignore
@@ -111,3 +111,18 @@ coverage
 exports
 .cache
 build
+
+
+# Custom
+
+data/*
+!data.zip
+__MACOSX/*
+
+############################
+# Strapi
+############################
+
+exports
+.cache
+build
