--- a/tutorials/code/next-corporate-site/back/package.json
+++ b/tutorials/code/next-corporate-site/back/package.json
@@ -7,12 +7,14 @@
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
-    "strapi": "strapi"
+    "strapi": "strapi",
+    "seed": "node scripts/seed.js"
   },
   "devDependencies": {},
   "dependencies": {
+    "fs-extra": "^9.0.1",
     "knex": "<0.20.0",
-    "sqlite3": "latest",
+    "sqlite3": "^5.0.0",
     "strapi": "3.0.5",
     "strapi-admin": "3.0.5",
     "strapi-connector-bookshelf": "3.0.5",
@@ -21,7 +23,8 @@
     "strapi-plugin-email": "3.0.5",
     "strapi-plugin-upload": "3.0.5",
     "strapi-plugin-users-permissions": "3.0.5",
-    "strapi-utils": "3.0.5"
+    "strapi-utils": "3.0.5",
+    "unzip-stream": "^0.3.0"
   },
   "author": {
     "name": "A Strapi developer"
