Add notification banner

--- a/tutorials/code/next-corporate-site/back/api/global/models/global.settings.json
+++ b/tutorials/code/next-corporate-site/back/api/global/models/global.settings.json
@@ -62,6 +62,11 @@
     },
     "footerSmallText": {
       "type": "string"
+    },
+    "notificationBanner": {
+      "type": "component",
+      "repeatable": false,
+      "component": "elements.notification-banner"
     }
   }
 }
