Add preview URL to the Strapi admin

--- a/tutorials/code/next-corporate-site/back/api/page/models/page.settings.json
+++ b/tutorials/code/next-corporate-site/back/api/page/models/page.settings.json
@@ -11,7 +11,11 @@
   "attributes": {
     "slug": {
       "type": "uid",
-      "required": false
+      "required": false,
+      "targetField": "shortName"
+    },
+    "shortName": {
+      "type": "string"
     },
     "metadata": {
       "type": "component",
