--- a/tutorials/code/next-corporate-site/front/package.json
+++ b/tutorials/code/next-corporate-site/front/package.json
@@ -16,6 +16,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
     "react-markdown": "^4.3.1"
   },
   "devDependencies": {
