--- a/articles/articles.yml
+++ b/articles/articles.yml
@@ -29,6 +29,8 @@
   source: https://medium.com/
   description: This article is about creating an Audit log or trail for a Strapi Application using strapi middleware. This will enable the admin to see all requests to API routes and all other activities which include Admin page visits and all CRUD done. This will also cover visibility to public API calls by unauthenticated users.
   categories:
-    - Feature
+    - Audit log
+    - Audit Trail
+    -Logs
   written_by: Adenle Abiodun
   written_by_url: https://medium.com/@adenleabbey
