--- a/tutorials/tutorials.yml
+++ b/tutorials/tutorials.yml
@@ -1985,7 +1985,7 @@
     - gatsby
     - Blog
   version: beta
-- title: Bundling Strapi & Nuxt: E-Commerce Tutorial with Snipcart
+- title: Bundling Strapi & Nuxt E-Commerce Tutorial with Snipcart
   link: https://snipcart.com/blog/strapi-nuxt-ecommerce-tutorial
   formats:
     - article
