--- a/.github/workflows/YAMLlint_PR.yml
+++ b/.github/workflows/YAMLlint_PR.yml
@@ -1,5 +1,5 @@
 name: Yaml Lint
-on: [pull_request]
+on: [push, pull_request]
 jobs:
   lintAllTheThings:
     runs-on: ubuntu-latest
@@ -7,3 +7,6 @@ jobs:
     - uses: actions/checkout@v1
     - name: yaml-lint
       uses: ibiqlik/action-yamllint@v1
+      with:
+	file_or_dir: tutorials/tutorials.yml articles/articles.yml showcase/showcase.yml starters/starters.yml
+	config_file: .yamllint.yml
