--- a/.github/workflows/YAMLlint_PR.yml
+++ b/.github/workflows/YAMLlint_PR.yml
@@ -1,5 +1,5 @@
 name: Yaml Lint
-on: [push, pull_request]
+on: [push]
 jobs:
   lintAllTheThings:
     runs-on: ubuntu-latest
@@ -9,4 +9,4 @@ jobs:
       uses: ibiqlik/action-yamllint@v1
       with:
 	file_or_dir: tutorials/tutorials.yml articles/articles.yml showcase/showcase.yml starters/starters.yml
-	config_file: .yamllint.yml
+	config_file: yamllint.yml
